# libcodeowners

./: .rubocop.yml  Gemfile  README.md  Rakefile  libcodeowners.gemspec
ext/libcodeowners/: Cargo.toml  extconf.rb
ext/libcodeowners/src/: lib.rs
lib/: libcodeowners.rb
lib/libcodeowners/: file_path_finder.rb  file_path_team_cache.rb  team_finder.rb  version.rb
sig/: libcodeowners.rbs
sorbet/: config
spec/: libcodeowners_spec.rb  spec_helper.rb
spec/libcodeowners/: file_path_finder_spec.rb  file_path_team_cache_spec.rb
spec/support/: application_fixtures.rb
